--- a/app/src/main/res/layout/item_block.xml
+++ b/app/src/main/res/layout/item_block.xml
@@ -1,31 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="0dp"
-    app:cardCornerRadius="0dp">
-    <RelativeLayout
+    android:paddingStart="@dimen/blockitem_horizontal_gap_size"
+    android:paddingEnd="@dimen/blockitem_horizontal_gap_size"
+    android:paddingTop="@dimen/blockitem_vertical_gap_size"
+    android:paddingBottom="@dimen/blockitem_vertical_gap_size"
+    android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/blockitem_imageview_icon"
+        android:layout_width="@dimen/blockitem_content_size"
+        android:layout_height="@dimen/blockitem_content_size"
+        android:src="@drawable/iconloop_icon"/>
+    <TextView
+        android:id="@+id/blockitem_textview_blockhash"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/blockitem_gap_size">
-        <ImageView
-            android:id="@+id/blockitem_imageview_icon"
-            android:layout_width="@dimen/blockitem_content_size"
-            android:layout_height="@dimen/blockitem_content_size"
-            android:src="@drawable/iconloop_icon"/>
-        <CheckBox
-            android:id="@+id/blockitem_checkbox"
-            android:layout_width="@dimen/blockitem_content_size"
-            android:layout_height="@dimen/blockitem_content_size"
-            android:background="@drawable/block_checkbox"
-            android:button="@null"/>
-        <TextView
-            android:id="@+id/blockitem_textview_blockhash"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/blockitem_content_size"
-            android:layout_toEndOf="@id/blockitem_checkbox"
-            android:textSize="@dimen/item_text_size"/>
-    </RelativeLayout>
-</androidx.cardview.widget.CardView>
+        android:layout_height="@dimen/blockitem_content_size"
+        android:textSize="@dimen/item_text_size"
+        android:gravity="center_vertical" />
+</LinearLayout>
