--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -1,52 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/transactionitem_gap_size"
-    app:cardElevation="0dp"
-    app:cardCornerRadius="0dp">
+    android:paddingStart="@dimen/transactionitem_horizontal_gap_size"
+    android:paddingEnd="@dimen/transactionitem_horizontal_gap_size"
+    android:paddingTop="@dimen/transactionitem_vertical_gap_size"
+    android:paddingBottom="@dimen/transactionitem_vertical_gap_size"
+    android:background="?android:attr/selectableItemBackground"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/transactionitem_gap_size"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/transactionitem_title_size"
-            android:textSize="@dimen/item_text_size"
-            android:text="@string/title_txHash"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="@dimen/transactionitem_txhash_size"
+            android:layout_height="@dimen/transactionitem_txhash_size"
+            android:background="@drawable/iconloop_icon"/>
         <TextView
             android:id="@+id/transactionitem_textview_txhash"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/transactionitem_content_size"
-            android:textSize="@dimen/item_text_size"
-            android:ellipsize="end"
-            android:maxLines="1"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/transactionitem_title_size"
-            android:textSize="@dimen/item_text_size"
-            android:text="@string/title_from"/>
-        <TextView
-            android:id="@+id/transactionitem_textview_from"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/transactionitem_content_size"
-            android:textSize="@dimen/item_text_size"
-            android:ellipsize="end"
-            android:maxLines="1"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/transactionitem_title_size"
-            android:textSize="@dimen/item_text_size"
-            android:text="@string/title_to"/>
-        <TextView
-            android:id="@+id/transactionitem_textview_to"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/transactionitem_content_size"
-            android:textSize="@dimen/item_text_size"
-            android:ellipsize="end"
-            android:maxLines="1"/>
+            android:layout_height="@dimen/transactionitem_txhash_size"
+            android:textSize="@dimen/item_text_size"/>
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="@dimen/transactionitem_title_size"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/item_text_size_small"
+                android:text="@string/title_from"/>
+            <TextView
+                android:layout_width="@dimen/transactionitem_title_size"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/item_text_size_small"
+                android:text="@string/title_to"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/transactionitem_textview_from"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/item_text_size_small"
+                android:ellipsize="end"
+                android:maxLines="1"/>
+            <TextView
+                android:id="@+id/transactionitem_textview_to"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/item_text_size_small"
+                android:ellipsize="end"
+                android:maxLines="1"/>
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
